crates/solidity/testing/snapshots/bindings_output/contracts/virtual_methods/generated/0.5.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[ input.sol:11:40 ]
    │
 11 │ ╭─▶     function foo() public pure virtual override(A) returns (string memory) {
    ┆ ┆   
 13 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[ input.sol:17:40 ]
    │
 17 │ ╭─▶     function foo() public pure virtual override returns (string memory) {
    ┆ ┆   
 19 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[ input.sol:24:32 ]
    │
 24 │ ╭─▶     function foo() public pure override(B, C) returns (string memory) {
    ┆ ┆   
 26 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
[39mReferences and definitions:[0m 
    ╭─[ input.sol:1:1 ]
    │
  4 │ contract A {
    │          ┬  
    │          ╰── name: 1
  5 │     function foo() public pure virtual returns (string memory) {
    │              ─┬─  
    │               ╰─── name: 2
    │ 
 10 │ contract B is A {
    │          ┬  
    │          ╰── name: 3
 11 │     function foo() public pure virtual override(A) returns (string memory) {
    │              ─┬─  
    │               ╰─── name: 4
    │ 
 16 │ contract C is A {
    │          ┬  
    │          ╰── name: 5
 17 │     function foo() public pure virtual override returns (string memory) {
    │              ─┬─  
    │               ╰─── name: 6
    │ 
 22 │ contract D is B, C {
    │          ┬  
    │          ╰── name: 7
    │ 
 24 │     function foo() public pure override(B, C) returns (string memory) {
    │              ─┬─  
    │               ╰─── name: 8
    │
    ├─[ input.sol:1:1 ]
    │
  5 │     function foo() public pure virtual returns (string memory) {
    │                                ───┬───  
    │                                   ╰───── unresolved
    │ 
 10 │ contract B is A {
    │               ┬  
    │               ╰── ref: 1
 11 │     function foo() public pure virtual override(A) returns (string memory) {
    │                                ───┬───  
    │                                   ╰───── unresolved
    │ 
 16 │ contract C is A {
    │               ┬  
    │               ╰── ref: 1
 17 │     function foo() public pure virtual override returns (string memory) {
    │                                ───┬───  
    │                                   ╰───── unresolved
    │ 
 22 │ contract D is B, C {
    │               ┬  ┬  
    │               ╰───── ref: 3
    │                  │  
    │                  ╰── ref: 5
────╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  3 │ ╭─▶ 
    ┆ ┆   
  8 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ input.sol:1:1 ]
    │
  5 │   ╭─▶     function foo() public pure virtual returns (string memory) {
    ┆   ┆   
  7 │   ├─▶     }
    │   │           
    │   ╰─────────── definiens: 2
    │ 
  9 │ ╭───▶ 
    ┆ ┆     
 14 │ ├───▶ }
    │ │         
    │ ╰───────── definiens: 3
    │
    ├─[ input.sol:1:1 ]
    │
 11 │         function foo() public pure virtual override(A) returns (string memory) {
    │     ───────────────────┬──────────────────  
    │                        ╰──────────────────── definiens: 4
    │ 
 15 │ ╭─▶ 
    ┆ ┆   
 20 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 5
    │
    ├─[ input.sol:1:1 ]
    │
 17 │         function foo() public pure virtual override returns (string memory) {
    │     ───────────────────┬──────────────────  
    │                        ╰──────────────────── definiens: 6
    │ 
 21 │ ╭─▶ 
    ┆ ┆   
 27 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 7
    │
    ├─[ input.sol:1:1 ]
    │
 23 │ ╭─▶     // D.foo() returns "C"
 24 │ ├─▶     function foo() public pure override(B, C) returns (string memory) {
    │ │                                                                             
    │ ╰───────────────────────────────────────────────────────────────────────────── definiens: 8
────╯
